feat: Excel文件查看器支持离线使用

--- a/excel-viewer/index.html
+++ b/excel-viewer/index.html
@@ -46,7 +46,7 @@
         </div>
     </div>
 
-    <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
+    <script src="xlsx.full.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
