--- a/excel-viewer/index.html
+++ b/excel-viewer/index.html
@@ -9,9 +9,15 @@
 <body>
     <div class="container">
         <h1>Excel文件查看器</h1>
+        <div class="memory-indicator" id="memoryIndicator" style="display: none;">
+            <div class="memory-bar">
+                <div class="memory-fill" id="memoryFill"></div>
+            </div>
+            <span class="memory-text" id="memoryText">内存: 0%</span>
+        </div>
         <div class="upload-section">
             <div class="upload-area" id="uploadArea">
-                <div class="upload-text">
+                <div class="upload-text" id="uploadText">
                     <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                         <polyline points="14,2 14,8 20,8"/>
@@ -19,8 +25,19 @@
                         <line x1="16" y1="17" x2="8" y2="17"/>
                         <polyline points="10,9 9,9 8,9"/>
                     </svg>
-                    <p>点击或拖拽Excel文件到这里</p>
-                    <p class="format-info">支持格式：.xlsx, .xls, .csv</p>
+                    <p class="main-text">点击或拖拽Excel文件到这里</p>
+                    <p class="format-info">支持格式：.xlsx, .xls, .csv • 最大50MB</p>
+                    <p class="feature-info">✨ 智能解析 • 🚀 高性能 • 💾 内存优化</p>
+                </div>
+                <div class="upload-progress" id="uploadProgress" style="display: none;">
+                    <div class="upload-spinner"></div>
+                    <div class="upload-status">
+                        <p class="status-text" id="uploadStatusText">正在读取文件...</p>
+                        <div class="upload-progress-bar">
+                            <div class="upload-progress-fill" id="uploadProgressFill"></div>
+                        </div>
+                        <p class="status-detail" id="uploadStatusDetail">0%</p>
+                    </div>
                 </div>
                 <input type="file" id="fileInput" accept=".xlsx,.xls,.csv" multiple>
             </div>
@@ -36,6 +53,46 @@
                     <input type="number" id="freezeRows" min="0" max="10" value="1" />
                     <button id="applyFreeze">应用冻结</button>
                     <button id="clearFreeze">清除冻结</button>
+                </div>
+                <div class="pagination-control" id="paginationControl" style="display: none;">
+                    <div class="pagination-info">
+                        <span>每页显示：</span>
+                        <select id="pageSize">
+                            <option value="100">100行</option>
+                            <option value="500" selected>500行</option>
+                            <option value="1000">1000行</option>
+                            <option value="2000">2000行</option>
+                        </select>
+                        <span id="pageInfo">第1页 / 共1页 (共0条)</span>
+                    </div>
+                    <div class="pagination-buttons">
+                        <button id="firstPage">首页</button>
+                        <button id="prevPage">上一页</button>
+                        <button id="nextPage">下一页</button>
+                        <button id="lastPage">末页</button>
+                    </div>
+                </div>
+            </div>
+            <div class="table-controls-bar" id="tableControlsBar" style="display: none;">
+                <div class="view-controls">
+                    <button class="view-btn" id="expandTable" title="展开表格">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"/>
+                        </svg>
+                        全屏显示
+                    </button>
+                    <button class="view-btn" id="fitContent" title="适应内容">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                            <path d="M4 9h16"/>
+                        </svg>
+                        适应高度
+                    </button>
+                    <div class="height-slider">
+                        <label for="tableHeight">高度:</label>
+                        <input type="range" id="tableHeight" min="300" max="1200" value="600" step="50">
+                        <span id="heightValue">600px</span>
+                    </div>
                 </div>
             </div>
             <div class="table-container" id="tableContainer">
